public/styles/site.css
body {
    background-color: rgb(184, 50, 50);
    font-size: medium;
    color: azure;
    font-family: sans-serif;
}

/* Form Styles */
.form{
  display: flex;
  flex-direction: column;
}

.request{
  display: flex;
  padding-top: 20px;
  padding-left: 20px;
}

.input{
  align-self: flex-end;
}

.label{
  width: 100px;
  align-self: flex-start;
}

.submit_button{
  padding-left: 350px;
  padding-top: 20px;
}


/* Transportation Page */

.caption{
  font-size: 12px;
  padding-left: 50px;
}

.bus10 {
  background-color: #354a5e;
  width: 150px;
  height: 45px;
  border-color: #354a5e;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.busimg{
  padding-left: 50px;
}

.bus11 {
  background-color: #c35715;
  width: 150px;
  height: 45px;
  border-color: #c35715;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus13 {
  background-color: #07ca79;
  width: 150px;
  height: 45px;
  border-color: #07ca79;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus14 {
  background-color: #0aa89b;
  width: 150px;
  height: 45px;
  border-color: #0aa89b;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus17 {
  background-color: #86a80a;
  width: 150px;
  height: 45px;
  border-color: #86a80a;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top:10px;
}

.bus20 {
  background-color: #e0a1d1;
  width: 150px;
  height: 45px;
  border-color: #e0a1d1;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus21 {
  background-color: #a81a0a;
  width: 150px;
  height: 45px;
  border-color: #a81a0a;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus30 {
  background-color: #721212;
  width: 150px;
  height: 45px;
  border-color: #721212;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus32 {
  background-color: #6d078d;
  width: 150px;
  height: 45px;
  border-color: #6d078d;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.bus40 {
  background-color: #405a9c;
  width: 150px;
  height: 45px;
  border-color: #405a9c;
  color: white;
  padding-top: 5px;
  margin-left: 10px;
  margin-top: 10px;
}

.buttons{
  display: flex;
  flex-direction: row;
  margin-left: 15px;
}

.button-col-1{
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  margin-left: 35px;
}

.button-col-2{
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  margin-left: 60px;
}


/* Footer Styles */
.contact_info{
  font-size: 15px;
}

/* Confirmation Page Styles */
.align{
  display: flex;
  flex-direction: row;
  width: 200px;
}

.label_output{
  align-content: start;
}

.output_data{
  align-content: end;
}


/* Navigation Page */
nav ul li a:hover,
nav ul li a:active {
  color: rgb(161, 127, 3);
}

.hidden{
  display: none !important;
}

nav {
    background-color: #78380d;
    padding: 5px;
    flex: 1;
  }

  nav ul {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
  }

  nav li {
    list-style: none;
    padding: 10px;
    margin: 0;

  }

  nav li a {
    padding: 10px;
    font-size: 14pt;
    font-weight: bold;
    color: #ccdeef;
  }


  a{
    text-decoration: none;
    color: #354a5e;
  }


/* FAQ Page */
  .indent{
    padding-left: 30px;
  }

  .verticalTriangle{
    width: 40px;
    height: 40px;
  }

  .horizontalTriangle{
    width: 40px;
    height: 40px;
  }

  .question{
    display: flex;
    flex-direction: row;
  }


  .q{
    color:#f3e9e3ca
  }

  .freq{
    color: #196503;
  }

  .park{
    width:300px;
  }

/* Vendors Page */

  .craft{
    display: flex;
    flex-direction: row;
  }

  .sources{
    font-size: small;
  }
  .desc{
    border-style: solid;
    border-radius: 25px;
    border-color: #7c3000;
    border-width: 5px;
    background-color: #2b6d01;
    padding-left: 15px;
    padding-right: 15px;
    text-align:justify;
  }

  .jwl1{
      padding-left: 20px;
  }

  .jwl2{
    padding-left: 20px;
    padding-top: 15px;
  }

  .jwl3{
    padding-left: 20px;
    padding-top: 15px;
  }

  .jwl4{
    padding-left: 20px;
    padding-top: 15px;
  }

  .jwl5{
    padding-left: 20px;
    padding-top: 15px;
  }

 .jewelry{
  display: flex;
  flex-direction: column;
  width: 70px;
 }

 .food1{
    padding-left: 20px;
 }

 .food2{
    padding-left: 20px;
    padding-top: 15px;
 }

 .food3{
  padding-left: 20px;
  padding-top: 15px;
 }

.food{
  width:70px;
}

.foodSmall{
  display: flex;
  flex-direction: column;
}

 .wines1{
    padding-left: 20px;
 }

 .wines2{
    padding-left: 20px;
    padding-top: 15px;
 }

 .wines3{
  width: 70px;
 }

 .wines4{
  width: 70px;
 }

.thumbnail{
  display: flex;
  flex-direction: column;
}

.wines{
  display: flex;
  flex-direction: row;
}

 .app1{
    padding-left: 20px;
 }

 .app2{
    padding-left: 20px;
    padding-top: 15px;
 }

 .craft-pics{
  display: flex;
  flex-direction:row;
  align-content:space-between;
}
 /* Entertainment Page */
 .fire{
    padding-top: 20px;
    padding-left: 20px;
    width: 60%;
 }

 .ppl{
    padding-top: 20px;
    padding-left: 20px;
    width: 60%;
 }


/* Body */
 h1{
  font-family: cursive;
  color: #e1e2d4;
 }


/* Home Page */
.description{
  padding-bottom: 15px;
}

.equal-row{
  display: flex;
  flex-direction: row;
}
.equal-row-1{
  display: flex;
  flex-direction: row;
}

.home{
  display: flex;
  flex-direction: column;

}
.centerr{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  justify-items: center;
}

  @media (min-width: 600px){
    .home{display: flex; flex-direction: row; }
    aside{display: flex; flex-direction: column; justify-self: end; padding-left: 150px;}
    .homepara{display: flex; flex-direction: column; justify-content: space-between;}
    .fst{padding-top: 40px;}
    p{font-size: larger;}
    .nav{display: flex; flex-direction: row; justify-self: center;}
    nav ul{flex-direction: row;}
    .splist{display: flex;}
    .park{width:500px;}
    .applebasket{width: 600px}
    .app1{width: 350px}
    .app2{width: 400px}
    .wines1{width: 250px}
    .wines2{width: 250px}
    .food1{height: 250px; width: 250px}
    .food2{height: 250px; width: 250px}
    .food3{height: 250px; width: 250px}
    .jwl1{height: 230px; width: 230px}
    .jwl2{height: 230px; width: 230px}
    .jwl3{height: 230px; width: 230px}
    .jwl4{height: 230px; width: 230px}
    .jwl5{height: 230px; width: 230px}
    p{font-size: x-large;}
    .home{
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
    }
  }

